[project]
name = "glmllb"
version = "0.1.0"
description = "Local Cloudflare Workers AI account load balancer for OpenAI-compatible clients."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
glmllb = "glmllb.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
